--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,13 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 
 version=0.0.1-SNAPSHOT
-group = "com.github.jschneidereit"
+group = "io.github.jschneidereit"
 
 kotestVersion=4.4.1
 jibVersion=2.7.1
 kotlinxCoroutinesCoreVersion=1.4.2
 kotlinxCliVersion=0.3.1
+exposedVersion=0.29.1
 
 project_description=Integrates the Jib plugin and Kotest framework allowing for docker images containing your smoke tests!
 project_website=https://github.com/jschneidereit/ketch
